# softOCT

./: README.md
code/: t1_simple_thresholding.py  t2_complex_thresholding.py  t3_t5_DOCT_1D.py  t4_particle_detection.py  t6_DOCT_2D.py
code/softOCT/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
code/softOCT/docs/: Makefile  conf.py  example.ipynb  make.bat
code/softOCT/src/: __init__.py  utilities.py
