[tool.poetry]
name = "softoct"
version = "0.1.0"
description = "Processing of Optical Coherence Tomography (OCT) data in Python"
authors = ["Cornelius Wittig"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
